# AdvancedResearch

./: .env.example  .gitignore  DOCS.md  Docs.md  README.md  context.txt  exa_search_example.py  example.py  examples.py  financial_example.py  pyproject.toml  requirements.txt
advanced_research/: __init__.py  api.py  main.py  prompts.py
examples/: README.md  advanced_config.py  ai_healthcare_research_report.md  basic_usage.py  batch_processing.py  chat_demo.py  custom_models.py  exa_search_example.py  export_example.py  multi_loop_research.py  output_formats.py  session_management.py
examples/api/: api_client_example.py  api_demo.py  simple_api_client.py
examples/outputs/: AdvancedResearch-806c9aa4-7c70-4917-878b-64b77f1018ae-time-20250811210423.json  AdvancedResearch-8b43dbe5-ec1c-4770-8da9-d4d852d44710-time-20250811203501.json  AdvancedResearch-8c65f95b-a28c-4f8a-b508-716ce03d4497-time-20250812100611.json  AdvancedResearch-c1057af4-7716-47bc-93dd-cd2acca37210-time-20250811210158.json  AdvancedResearch-e3c7c339-0ccf-40c7-afb9-ffbacd832a5e-time-20250811184959.json  AdvancedResearch-e95a8d1a-8383-4420-991e-9a87dc9494a4-time-20250812115049.json
