[build-system]
requires = ["uv"]
build-backend = "uv.build"

[project]
name = "advancedresearch"
version = "0.1.0"
description = "Advanced Multi-Agent Research System - Enhanced implementation of Anthropic's orchestrator-worker pattern with 90.2% performance improvement over single-agent systems"
license = { text = "MIT" }
authors = [
    { name = "Kye Gomez", email = "kye@swarms.world" }
]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "artificial intelligence", 
    "multi-agent systems", 
    "research automation", 
    "anthropic", 
    "orchestrator-worker pattern",
    "parallel execution",
    "web search",
    "citation generation",
    "llm-as-judge"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "swarms >=6.0.0",
    "python-dotenv >=1.0.0",
    "requests >=2.31.0",
    "loguru >=0.7.0",
    "pydantic >=2.0.0"
]

[project.urls]
Homepage = "https://github.com/The-Swarm-Corporation/AdvancedResearch"
Documentation = "https://github.com/The-Swarm-Corporation/AdvancedResearch/blob/main/Docs.md"
Repository = "https://github.com/The-Swarm-Corporation/AdvancedResearch"



[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "F401", "F403", "E402"]

[tool.autopep8]
max_line_length = 88
ignore = "E501,W6"
in-place = true
recursive = true
aggressive = 3

[project.optional-dependencies]
dev = [
    "pytest >=7.4.0",
    "pytest-asyncio >=0.21.0",
    "black >=23.1.0",
    "ruff >=0.1.6",
    "mypy >=1.5.0",
    "types-requests >=2.31.0"
]
lint = [
    "ruff >=0.1.6",
    "types-toml >=0.10.8.1",
    "types-redis >=4.3.21.6",
    "types-pytz >=2023.3.0.0",
    "black >=23.1.0",
    "types-chardet >=5.0.4.6",
    "mypy-protobuf >=3.0.0"
]
